--- a/index.html
+++ b/index.html
@@ -275,10 +275,57 @@
         <span class="ranking-icon icon"><i class="fas fa-share-square"></i></span>
       </div>
     </div>
+    <div class="wrap-body__main fixed-bar">
+      <div class="fixed-bar__check-box">
+        <i class="far fa-square"></i>
+      </div>
+      <div class="fixed-bar__listening listening">
+        <span class="listening-icon"><i class="far fa-play-circle"></i></span>
+        <span class="listening-text">듣기</span>
+      </div>
+      <div class="fixed-bar__add add">
+        <span class="add-icon"><i class="fas fa-plus"></i></span>
+        <span class="add-text">재생목록추가</span>
+      </div>
+      <div class="fixed-bar__filling filling">
+        <span class="filling-icon"><i class="far fa-folder"></i></span>
+        <span class="filling-text">담기</span>
+      </div>
+      <div class="fixed-bar__download download">
+        <span class="download-icon"><i class="fas fa-download"></i></span>
+        <span class="download-icon">다운</span>
+      </div>
+      <div class="fixed-bar__checked-songs checked-songs">0곡 선택
+      </div>
+    </div>
   </div>
     <div class="wrap-body__right">
-      <div class="box">1</div>
-      
+      <div class="play-list">
+        <div class="play-list__top">
+          <div class="play-list__top-icon"><i class="fas fa-box"></i></div>
+          <div class="play-list__top-icon"><i class="fas fa-level-down-alt"></i></div>
+          <div class="play-list__top-icon"><i class="far fa-window-minimize"></i></div>
+          <div class="play-list__top-icon"><i class="far fa-clone"></i></div>
+          <div class="play-list__top-icon"><i class="fas fa-times"></i></div>
+        </div>
+        <div class="play-list__header">
+          <div class="play-list__header-bar header-bar">
+           <span class="header-bar__element"><i class="fas fa-music"></i></span>
+           <span class="header-bar__element">뮤직</span>
+           <span class="header-bar__element"><i class="fas fa-video"></i></span>
+          </div>
+          <div class="play-list__header-main header-main">
+            <div class="header-main__album album">
+              <img class="play-list__avatar" src="images/play-list.jpg" >
+            </div>
+            <div class="header-main__album-info">
+              <div class="album-title">Love poem</div>
+              <div class="album-artist">아이유 (IU)</div>
+            </div>
+            <div class="header-main__like-icon"><i class="far fa-heart"></i></div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
     </div>
