--- a/index.html
+++ b/index.html
@@ -324,6 +324,89 @@
             </div>
             <div class="header-main__like-icon"><i class="far fa-heart"></i></div>
           </div>
+          <div class="play-list__header-bottom header-bottom">
+            <div class="header-bottom__lyrics first-line">누구를 위해 누군가</div>
+            <div class="header-bottom__lyrics second-line">기도하고 있나 봐</div>
+            <div class="header-bottom__control control">
+              <input type="range" class="control-music" 
+              min="0.1"
+              max="5.0" value="0"
+              step="0.1">
+              <div class="control__volume-icon"><i class="fas fa-volume-off"></i></div>
+              <input type="range" class="control-volume" 
+              min="0.1"
+              max="5.0" value="0.2"
+              step="0.1">
+            </div>
+            <div class="header-bottom__play-time play-time">
+              <span class="play-time start">00:00</span>
+              <span class="play-time end">04:18</span>
+            </div>
+            <div class="header-bottom__icon">
+              <div class="icon-type refresh"><i class="fas fa-retweet"></i></div>
+              <div class="icon-type random"><i class="fas fa-random"></i></div>
+              <div class="icon-type backward"><i class="fas fa-backward"></i></div>
+              <div class="icon-type play"><i class="far fa-play-circle"></i></div>
+              <div class="icon-type forward"><i class="fas fa-forward"></i></div>
+              <div class="icon-type equalizer"><i class="fas fa-assistive-listening-systems"></i></div>
+              <div class="icon-type list"><i class="fas fa-bars"></i></div>
+            </div>
+          </div>
+        </div>
+        <div class="play-list__body">
+          <div class="play-list__body-top body-top">
+            <div class="body-top__section play-list">재생목록(195)</div>
+            <div class="body-top__section lyrics">가사보기</div>
+          </div>
+          <div class="play-list__body-border"></div>
+          <div class="play-list__body-mid body-mid">
+            <div class="body-mid__section syn">동기화 <i class="fas fa-sort-down"></i></div>
+            <div class="body-mid__section delete-same">중복곡삭제</div>
+            <div class="body-mid__section line-up">정렬 <i class="fas fa-sort-down"></i></div>
+            <div class="body-mid__section-search"><i class="fas fa-search"></i></div>
+          </div>
+          <div class="play-list__body-main body-main">
+            <div class="body-main__play-list frist">
+              <div class="check-box"><i class="far fa-square"></i></div>
+              <div class="song-title">다시 난, 여기</div>
+              <div class="artist">백예린</div>
+            </div>
+            <div class="body-main__play-list second">
+              <div class="check-box"><i class="far fa-square"></i></div>
+              <div class="song-title">너를 만나</div>
+              <div class="artist">폴킴</div>
+            </div>
+            <div class="body-main__play-list third">
+              <div class="check-box"><i class="far fa-square"></i></div>
+              <div class="song-title">우리 왜 헤어져야 해</div>
+              <div class="artist">신예영</div>
+            </div>
+            <div class="body-main__play-list fourth">
+              <div class="check-box"><i class="far fa-square"></i></div>
+              <div class="song-title">11:11</div>
+              <div class="artist">태연</div>
+            </div>
+            <div class="body-main__play-list fifth">
+              <div class="check-box"><i class="far fa-square"></i></div>
+              <div class="song-title">어떻게 지내</div>
+              <div class="artist">오반</div>
+            </div>
+          </div>
+          <div class="play-list__body-bottom body-bottom">
+            <div class="body-bottom__section check-box"><i class="far fa-square"></i></div>
+            <div class="body-bottom__section filling">
+              <i class="far fa-folder"></i> 담기
+            </div>
+            <div class="body-bottom__section download">
+              <i class="fas fa-download"></i> 다운
+            </div>
+            <div class="body-bottom__section delete">
+              <i class="fas fa-times"></i> 삭제
+            </div>
+            <div class="body-bottom__section add">
+              <i class="fas fa-plus"></i> 추가
+            </div>
+          </div>
         </div>
       </div>
     </div>
