--- a/accumulate.html
+++ b/accumulate.html
@@ -11,7 +11,7 @@
     <title>Genie Music</title>
   </head>
   <style>
-    .time-part .real-time{
+    .time-part .accumulate{
       color:#FF5B62;
     }
   </style>
