--- a/daily.html
+++ b/daily.html
@@ -11,8 +11,8 @@
     <title>Genie Music</title>
   </head>
   <style>
-    .time-part .real-time{
-      color:#FF5B62;
+    .time-part .daily{
+      color: #ff5b62;
     }
   </style>
   <body>
@@ -120,7 +120,16 @@
         <a href="month.html"><span class="chart month">월간</span></a>
         <a href="accumulate.html"><span class="chart accumulate">누적</span></a>
       </div>
-      <div class="time-part__clock">2020. 06. 05 14:00 <i class="fas fa-sort-down"></i></div>
+      <div class="time-part__clock">
+        <div class="time-part__border-arrow">
+          <i class="fas fa-angle-left"></i>
+        </div>
+        2020. 06. 05 
+        <i class="fas fa-sort-down"></i>
+        <div class="time-part__border-arrow right">
+          <i class="fas fa-angle-right"></i>
+        </div>
+    </div>
     </div>
     <div class="wrap-body__main top">
       <span class="top__ranking">
